# osgearth0vcpkg

./: .gitignore  README.md
cmake/: arm64-android-asan-toolchain.cmake
cmake/my-vcpkg-cfg/triplets/: arm64-android-asan.cmake  arm64-android.cmake
docs/cmake/: CMAKE_CXX_FLAGS_XXX.md
docs/debug/: dbg-crash-by-asan-01.md
docs/osg/: osg-ArgumentParser.md
docs/osgearth-ref/osgearth-vcpkg-build/: arm64-android.cmake  readme.md  x64-android.cmake
docs/osgearth-ref/osgearth-vcpkg-build/custom-ports/gdal/: portfile.cmake  vcpkg.json
docs/vcpkg/: 00my_vcpkg_install.md  01build-prj-with-vcpkg.md  vcpkg-cmd.md  vcpkg_install_lib_with-asan.md
platform/: .gitignore
platform/AndroEarth0Vcpkg/: .gitignore  settings.gradle.kts
platform/AndroEarth0Vcpkg/app/: .gitignore  build.gradle.kts  how2asan-cfg.md  readme.md
platform/AndroEarth0Vcpkg/app/src/androidTest/java/com/oearth/androearth0vcpkg/: ExampleInstrumentedTest.java
platform/AndroEarth0Vcpkg/app/src/main/: AndroidManifest.xml
platform/AndroEarth0Vcpkg/app/src/main/java/com/oearth/androearth0vcpkg/: EGLview.java  osgEarthViewer.java  osgNativeLib.java
platform/AndroEarth0Vcpkg/app/src/main/jni/: CMakeLists.txt  OsgMainApp.cpp  OsgMainApp.hpp  osgNativeLib.cpp
platform/AndroEarth0Vcpkg/app/src/main/res/values/: strings.xml  themes.xml
platform/AndroEarth0Vcpkg/app/src/main/res/values-night/: themes.xml
platform/AndroEarth0Vcpkg/app/src/main/resources--bk/lib/x86/: wrap.sh.bk
platform/AndroEarth0Vcpkg/app/src/main/resources/lib/arm64-v8a/: wrap.sh.bk
platform/AndroEarth0Vcpkg/app/src/test/java/com/oearth/androearth0vcpkg/: ExampleUnitTest.java
platform/AndroEarth0Vcpkg/gradle/: gradle.properties  libs.versions.toml
platform/AndroEarth0Vcpkg/gradle/wrapper/: gradle-wrapper.properties
scripts/: .gitignore  install_3rd_arm64-android.sh  mk4andro.sh
scripts/ndk_asan_addrs/: addr2line_parse_crash.sh  addr_from_ndk_asan_log.py
scripts/ndk_asan_addrs/doc/: 0example-ndk_asan_log.txt  1example-asan_addrs.txt  2example-asan_addrs_parsed.cxx  2example-detail-callstacks.md  android-asan.md  how-to-use_asan_2ndk.md  why-asan&debuger-conflict.md  why-asan-libz.a-no-sanitizer.md
